--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="cs">
     <head>
         <meta charset="UTF-8">
         <title>
             {% block title %}Welcome!{% endblock %}
         </title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+            <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
+        {% endblock %}
     </head>
     <body>
-
-        {% block body %}
-        {% endblock %}
+        {% block body %}{% endblock %}
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
