--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,19 +1,21 @@
+{% include "base.html.twig" %}
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
 
-<form action="{{ path('app_login') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}"/>
+<div style="margin-top:10em">
+    <div class="wrapper fadeInDown">
+        <div class="formContent">
+            <h1 class="login-title">Přihlášení</h1>
+            <form action="{{ path('app_login') }}" method="post">
+                <input name="_username" id="username" type="text" class="fadeIn second" placeholder="Username" value="{{ last_username }}" />
+                <input name="_password" id="password" type="password" class="fadeIn third" placeholder="Password" value="" />
+                <input type="submit" class="fadeIn fourth" value="Login"/>
+            </form>
+        </div>
+    </div>
+</div>
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password"/>
-
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account"/>
-    #}
-
-    <button type="submit">login</button>
-</form>
+{% block stylesheet %}
+    <link href="{{ asset("css/security/login.css") }}" rel="stylesheet">
+{% endblock %}
